# ZipRS

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  THIRD-PARTY-NOTICES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: cli.rs  commands.rs  lib.rs  main.rs  progress.rs
src-tauri/src/archive/: entry.rs  mod.rs  rar_backend.rs  tar_backend.rs  zip_backend.rs
src/lib/: store.svelte.ts  themes.ts  types.ts  utils.ts
src/lib/components/: AddressBar.svelte  ContextMenu.svelte  Dialogs.svelte  FileTable.svelte  ProgressDialog.svelte  StatusBar.svelte  ThemeSwitcher.svelte  Toolbar.svelte  WelcomeScreen.svelte
