[package]
name = "ziprs"
version = "0.1.0"
edition = "2021"
description = "A professional archive manager built with Rust + Tauri"

[lib]
name = "ziprs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
zip = "2"
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.5"
zstd = "0.13"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
open = "5"
